# OpenPLL

./: .gitignore  HD_LOAD_VARIANT_COMPARISON.md  Makefile  PLL_ARCHITECTURE.md  README.md  REPRODUCIBILITY.md  SKY130_IMPLEMENTATION.md  SPICE_VALIDATION.md
apptainer/: openpll-release.def
models/: IntegerPLL_BBPD_model.v  IntegerPLL_DCO_25MHzCoarse_model.v  IntegerPLL_DCO_model.v
openlane/IntegerPLL_BBPD/: async_false_paths.sdc  config.json
openlane/IntegerPLL_DCO/: config.json  config_nofill.json
openlane/IntegerPLL_DCO_EINVP/: config.json  no_clock.sdc
openlane/IntegerPLL_DCO_EINVP_COARSE/: config.json  no_clock.sdc  pin_order.cfg
openlane/IntegerPLL_DCO_EINVP_FAST/: config.json  no_clock.sdc
openlane/IntegerPLL_DCO_EINVP_SPARSE64/: config.json
openlane/IntegerPLL_DCO_EINVP_SPARSE72/: config.json
openlane/IntegerPLL_DigitalCore/: config.json  config.tcl  config_coarse4.json  config_force127_s4a2.json  pnr.sdc
openlane/IntegerPLL_HardMacroTop/: async_macro_top.sdc  config.json
openlane/IntegerPLL_HardMacroTop_EINVP/: config.json  pin_order.cfg
openlane/IntegerPLL_HardMacroTop_EINVP_25MHzConfigured/: async_configured_top.sdc  config.json  pin_order.cfg
openlane/IntegerPLL_HardMacroTop_EINVP_FAST/: async_macro_top.sdc  config.json
rtl/: IntegerPLL_25MHzModeConfig.v  IntegerPLL_25MHzModeController.v  IntegerPLL_B2TH.v  IntegerPLL_DLF.v  IntegerPLL_DigitalCore.v  IntegerPLL_Divider.v  IntegerPLL_HardMacroTop.v  IntegerPLL_HardMacroTop_EINVP.v  IntegerPLL_HardMacroTop_EINVP_25MHzConfigured.v  IntegerPLL_HardMacroTop_EINVP_FAST.v  IntegerPLL_MMD_Retimer.v  IntegerPLL_Top.v
scripts/: analyze_pll_jitter.py  apptainer_reproduce_latest_release.sh  bbpd_magic_rcx.sh  check_configured_hard_macro_top_einvp.py  check_dco_coarse_targets.py  check_dco_einvp_postlayout.py  check_dco_loadstyle_candidates.py  check_dco_sweep.py  check_filled_dco_calibration.py  check_filled_dco_highcode_tail.py  check_filled_dco_local_gain.py  check_filled_dco_pvt_endpoints.py  check_filled_dco_tt_9pt.py  check_hard_macro_top.py  check_hard_macro_top_einvp.py  check_hard_macro_top_spice.py  check_librelane_signoff.py  check_sky130_macros.sh  check_sky130_pll_25mhz_release.py  check_sky130_pll_validation.py  check_top_macro_assembly.py  check_xyce_mixed_signal.py  compare_ideal_tdc_25mhz.py  dco_magic_rcx.sh  digital_loop_gain_sweep.py  pll_top_gain_sweep.py  reproduce_latest_release.sh  search_bbpll_gain.py  sim_digital.sh  sim_pll_top_acq_model.sh  simulate_bbpll_jitter.py  sky130_pdk.py  spice_bbpd_check.py  spice_bbpd_check.sh  spice_bbpd_postlayout.py  spice_bbpd_postlayout.sh  spice_dco_decoder_check.py  spice_dco_decoder_check.sh  spice_dco_postlayout.py  spice_dco_postlayout.sh  (+20 more)
sky130/: IntegerPLL_BBPD_sky130.v  IntegerPLL_DCO_einvp_coarse_sky130.v  IntegerPLL_DCO_einvp_fast_sky130.v  IntegerPLL_DCO_einvp_sky130.v  IntegerPLL_DCO_einvp_sparse64_sky130.v  IntegerPLL_DCO_einvp_sparse72_sky130.v  IntegerPLL_DCO_sky130.v  sky130_fd_sc_hd_pll_blackbox.v
tb/: IntegerPLL_HardMacroTop_EINVP_stub.v  tb_digital_core.v  tb_digital_core_coarse.v  tb_digital_loop_acq.v  tb_pll_25mhz_configured_behavioral.v  tb_pll_25mhz_configured_wrapper.v  tb_pll_25mhz_mode_config.v  tb_pll_25mhz_mode_controller.v  tb_pll_top_acq_model.v  tb_pll_top_model.v  tb_sky130_top_smoke.v
tools/xyce_cinterface_smoke/: CMakeLists.txt  xyce_bbpd_cinterface_smoke.cpp  xyce_cinterface_smoke.cpp  xyce_mixed_step_probe.cpp  xyce_pll_analog_dco_mixed_signal_smoke.cpp  xyce_pll_mixed_signal_smoke.cpp  xyce_pll_postlayout_dco_mixed_signal_smoke.cpp  yadc_ydac_smoke.cir
